--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-<title>DB금융투자 도움말 제작도구</title>
+<title>HelpPress Publisher</title>
 <link href="/img/favicon.ico" rel="shortcut icon" type="image/ico" />
 <link href="/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="/jquery.contextmenu/jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
@@ -20,7 +20,7 @@
 <header>
 	<nav class="navbar navbar-expand-md fixed-top justify-content-between navbar-light bg-light bf-shadow">
 		<a class="navbar-brand" href="/">
-			<img src="/img/ic-logo-dbfi.png"  class="d-inline-block align-top" alt="bitflow logo" style="height: 30px;">&nbsp;&nbsp;도움말관리시스템
+			<img src="/img/ic-logo-dbfi.png"  class="d-inline-block align-top" alt="company logo" style="height: 30px;">&nbsp;&nbsp;HelpPress
 		</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
