--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-<title>HelpPress Publisher</title>
+<title>{{{layout.title}}}</title>
 <link href="/img/favicon.ico" rel="shortcut icon" type="image/ico" />
 <link href="/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="/jquery.contextmenu/jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
@@ -28,7 +28,7 @@
 		<div class="navbar-collapse collapse" id="navbarCollapse">
 			<ul class="navbar-nav mr-auto nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link{{#tab1}}{{tab1}}{{/tab1}}" href="/category">도움말그룹 관리</a>
+          <a class="nav-link{{#tab1}}{{tab1}}{{/tab1}}" href="/group">도움말그룹 관리</a>
         </li>
         <li class="nav-item">
           <a class="nav-link{{#tab2}}{{tab2}}{{/tab2}}" href="/content">도움말 관리</a>
