--- a/src/main/resources/templates/page/content.html
+++ b/src/main/resources/templates/page/content.html
@@ -51,6 +51,8 @@
 	
 </div>
 
+<iframe id="ifrm" style="display: none;"></iframe>
+
 {{#script}}
 <script src="/SynapEditor_2.8.4/synapeditor/synapeditor.config.js"></script>
 <script src="/SynapEditor_2.8.4/synapeditor/synapeditor.min.js"></script>
