--- a/src/main/resources/templates/page/release.html
+++ b/src/main/resources/templates/page/release.html
@@ -54,14 +54,14 @@ ul.list-wrapper li { padding: 2px 10px; font-size: 14px; font-weight: 300; list-
 {{#script}}
 <script src="/page/group.js"></script>
 <script>
-function openPreview() {
-	
-}
-
 $(function () {
 	$("#btn-download-all").click(function() {
+		var release = false;
+		if (confirm("현재 버전을 배포 처리로 기록하시겠습니까?")) {
+			release = true;
+		}
 		$(".spinner-border").show();
-		$("#ifrm").attr("src", "/api/v1/ecm/release/all");
+		$("#ifrm").attr("src", "/api/v1/ecm/release/all?release=" + release);
 		setTimeout(function() {
 			$(".spinner-border").hide();
 		}, 6000);
