--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-<title>{{{layout.title}}}</title>
+<title>HelpPress Publisher</title>
 <link href="/img/favicon.ico" rel="shortcut icon" type="image/ico" />
 <link href="/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="/css/context.standalone.css" rel="stylesheet" type="text/css">
