--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,7 +8,7 @@
 <link href="/img/favicon.ico" rel="shortcut icon" type="image/ico" />
 <link href="/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="/css/context.standalone.css" rel="stylesheet" type="text/css">
-<link href="/fontawesome5/css/all.css" rel="stylesheet" type="text/css">
+<!-- <link href="/fontawesome5/css/all.css" rel="stylesheet" type="text/css"> -->
 <link href="/jquery/contextmenu/jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
 <link href="/jquery/fancytree/skin-lion/ui.fancytree.css" rel="stylesheet" type="text/css">
 <link href="/SynapEditor_2.8.4/synapeditor/synapeditor.min.css" rel="stylesheet" type="text/css">
@@ -73,6 +73,8 @@
 </div>
 
 <div id="snackbar"></div>
+
+<div class="spinner primary"></div>
 
 <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem; display: none;">
   <span class="sr-only">Loading...</span>
