--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,10 +1,9 @@
-@import url('//fonts.googleapis.com/earlyaccess/notosanskr.css');
-html, body { height: 100%; font-family: 'Noto Sans KR','Apple SD Gothic','ÎßëÏùÄÍ≥†Îîï','Nanum Gothic',sans-serif; font-weight: normal; overflow-y: hidden; }
+html, body { height: 100%; font-family: 'Noto Sans KR','Apple SD Gothic','∏º¿∫∞ÌµÒ','Nanum Gothic',sans-serif; font-weight: normal; overflow-y: hidden; }
 a:hover { text-decoration: none; }
 .hide { display: none; }
 .navbar { z-index: 1; border-bottom: 1px solid #eee; padding: 0 16px; vertical-align: middle; height: 52px; }
 .navbar-brand { width: 188px; }
-.navbar-nav { width: 510px; }
+.navbar-nav { width: 600px; }
 .navbar-nav .nav-link { padding: 4px 8px; }
 .navbar-light .navbar-nav .nav-link.active { color: white; background-color: #7ecef4; }
 .nav-item { min-width: 126px; text-align: center; }
