--- a/src/main/resources/templates/page/group.html
+++ b/src/main/resources/templates/page/group.html
@@ -32,26 +32,26 @@ input[type="button"] + input[type="button"] { margin-right: 12px; }
 		</div>
 	  <div class="row">
 	    <div class="col-12">
-				<form name="frm">
-					<!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
-					<div class="form-group row">
-				    <label for="groupId" class="col-sm-2 col-form-label">도움말그룹URI</label>
-				    <div class="col-sm-10">
-				      <input type="text" id="groupId" class="form-control" placeholder="영소문자 (공백없음)" value="{{#item}}{{item.uri}}{{/item}}">
-				    </div>
-				  </div>
+			<form name="frm">
+				<!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
+				<div class="form-group row">
+			    <label for="groupId" class="col-sm-2 col-form-label">도움말그룹URI</label>
+			    <div class="col-sm-10">
+			      <input type="text" id="groupId" class="form-control" placeholder="영소문자 (공백없음)" value="{{#item}}{{item.uri}}{{/item}}" maxlength="20">
+			    </div>
+			  </div>
 	        <div class="form-group row">
 	          <label for="name" class="col-sm-2 col-form-label">도움말그룹명</label>
 	          <div class="col-sm-10">
-	            <input type="text" id="name" class="form-control" placeholder="한글이름" value="{{#item}}{{item.name}}{{/item}}">
+	            <input type="text" id="name" class="form-control" placeholder="한글이름" value="{{#item}}{{item.name}}{{/item}}" maxlength="20">
 	          </div>
-					</div>
-	        <div class="form-group row">
-	          <label for="orderNo" class="col-sm-2 col-form-label">정렬순서</label>
-	          <div class="col-sm-10">
-	            <input type="text" id="orderNo" class="form-control" placeholder="숫자 (0~255)" value="{{#item}}{{item.orderNo}}{{/item}}">
-	          </div>
-					</div>
+				</div>
+		        <div class="form-group row">
+		          <label for="orderNo" class="col-sm-2 col-form-label">정렬순서</label>
+		          <div class="col-sm-10">
+		            <input type="text" id="orderNo" class="form-control" placeholder="숫자 (0~255)" value="{{#item}}{{item.orderNo}}{{/item}}" maxlength="3">
+		          </div>
+				</div>
 			  </form>
 		  </div>
 	  </div>
