--- a/src/main/resources/templates/page/join.html
+++ b/src/main/resources/templates/page/join.html
@@ -20,14 +20,13 @@
 	        <h3>관리자 등록</h3>
 	      </div>
 	      <div class="card-body">
-          <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
           <fieldset>
             <div class="row">
               <div class="col-5">
                 <label for="username">아이디</label>
               </div>
               <div class="col-7">
-                <input type="text" id="username" name="username" placeholder="아이디" maxlength="16" />
+                <input type="text" id="username" name="username" placeholder="아이디 (영숫자, 최대 15자)" maxlength="15" />
               </div>
             </div>
             <div class="row">
@@ -35,7 +34,7 @@
                 <label for="password">비밀번호</label>
               </div>
               <div class="col-7">
-                <input type="password" id="password" name="password" placeholder="비밀번호" maxlength="16" />
+                <input type="password" id="password" name="password" placeholder="비밀번호 (영수특수문자, 최대 15자)" maxlength="15" />
               </div>
             </div>
             <div class="row">
@@ -43,7 +42,7 @@
                 <label for="password2">비밀번호 확인</label>
               </div>
               <div class="col-7">
-                <input type="password" id="password2" name="password2" placeholder="비밀번호 확인" onkeydown="onJoinEnterPressed();" maxlength="16" />
+                <input type="password" id="password2" name="password2" placeholder="비밀번호 확인 (영수특수문자, 최대 15자)" onkeydown="onJoinEnterPressed();" maxlength="16" />
               </div>
             </div>
              <div class="row">
