--- a/src/main/resources/templates/page/release.html
+++ b/src/main/resources/templates/page/release.html
@@ -7,7 +7,7 @@ input[type="button"] + input[type="button"] { margin-right: 12px; }
 .header-row { text-align: center; }
 .list-row .col { height: 100%; overflow-y: auto; }
 ul.list-wrapper { padding: 0; }
-ul.list-wrapper li { padding: 2px 10px; font-size: 14px; font-weight: 300; list-style-type: none; }
+ul.list-wrapper li { padding: 2px 10px; font-size: 14px; font-weight: 300; list-style-type: none; border-bottom: 1px solid #ccc; }
 </style>
 {{/style}}
 
@@ -26,17 +26,24 @@ ul.list-wrapper li { padding: 2px 10px; font-size: 14px; font-weight: 300; list-
 <div class="row list-row" style="position: absolute; top: 90px; width: 100%; height: calc(100% - 90px);">
 	
 	<div class="col col-sm-4">
-	  <ul class="list-wrapper"> 
+	  <ul class="list-wrapper release-wrapper"> 
+		{{#rlist}}
+		<li>
+		  <a href="javascript:downloadFromHistory({{id}})">
+		  <span><i class="far fa-file-code"></i>&nbsp;{{type}}</span><span style="float: right;">{{updDtStr}}</span>
+		  </a>
+		</li>
+		{{/rlist}}
 	  </ul>
 	</div>
 	
 	<div class="col col-sm-4">
 		<ul class="list-wrapper">
-			{{#list}}
-			<li class="alert alert-light">
+			{{#hlist}}
+			<li>
 			  <span><i class="far fa-file-code"></i>&nbsp;{{statusKr}} {{filePath}}</span><span style="float: right;">{{updDtStr}}</span>
-		  </li>
-			{{/list}}
+			 </li>
+			{{/hlist}}
 		</ul>
 	</div>
 	
@@ -52,22 +59,7 @@ ul.list-wrapper li { padding: 2px 10px; font-size: 14px; font-weight: 300; list-
 <iframe id="ifrm" style="display: none;"></iframe>
 
 {{#script}}
-<script src="/page/group.js"></script>
-<script>
-$(function () {
-	$("#btn-download-all").click(function() {
-		var release = false;
-		if (confirm("현재 버전을 배포 처리로 기록하시겠습니까?")) {
-			release = true;
-		}
-		$(".spinner-border").show();
-		$("#ifrm").attr("src", "/api/v1/ecm/release/all?release=" + release);
-		setTimeout(function() {
-			$(".spinner-border").hide();
-		}, 6000);
-	});
-});
-</script>
+<script src="/page/release.js"></script>
 {{/script}}
 
 {{/layout}}
