--- a/src/main/resources/templates/page/user.html
+++ b/src/main/resources/templates/page/user.html
@@ -39,19 +39,19 @@ input[type="button"] + input[type="button"] { margin-right: 12px; }
 					<div class="form-group row">
 				    <label for="groupId" class="col-sm-2 col-form-label">관리자ID</label>
 				    <div class="col-sm-10">
-				      <input type="text" id="username" class="form-control" placeholder="관리자ID">
+				      <input type="text" id="username" class="form-control" placeholder="관리자ID (영숫자, 최대 15자)" maxlength="15">
 				    </div>
 				  </div>
 	        <div class="form-group row">
 	          <label for="password" class="col-sm-2 col-form-label">비밀번호</label>
 	          <div class="col-sm-10">
-	            <input type="password" id="password" class="form-control" placeholder="비밀번호">
+	            <input type="password" id="password" class="form-control" placeholder="비밀번호 (영수특수문자, 최대 15자)" maxlength="15">
 	          </div>
 					</div>
 					<div class="form-group row">
 	          <label for="password2" class="col-sm-2 col-form-label">비밀번호 확인</label>
 	          <div class="col-sm-10">
-	            <input type="password" id="password2" class="form-control" placeholder="비밀번호 확인">
+	            <input type="password" id="password2" class="form-control" placeholder="비밀번호 확인 (영수특수문자, 최대 15자)" maxlength="15">
 	          </div>
 	        </div>
 			  </form>
