--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -32,43 +32,50 @@ a:hover { text-decoration: none; }
 .nav-item { min-width: 126px; text-align: center; }
 .bf-shadow { -moz-box-shadow: 3px 1px 3px 1px #999; -webkit-box-shadow: 3px 1px 3px 1px #999;
     box-shadow: 3px 1px 3px 1px #999; }
-.nav-right .material-icons { font-size: 32px; margin-top: 6px; }
-#bf-body-wrapper { height: 100%; }
+.nav-right { position: absolute; right: 12px; bottom: 0; }
+.nav-right .material-icons { font-size: 32px; margin-top: 6px; color: #555; }
+.nav-right a + a { margin-left: 12px; }
+#bf-body-wrapper { height: calc(100% - 54px); }
 #editor-wrapper { display: none; }
 #emptyTree { padding: 10px 0 0 0; }
 #sel_category { font-size: 16px; border: 2px solid #888; border-radius: 9px; padding: 4px 12px; background-color: #7ecef4; color: white; }
 #contents-detail { border: 0; }
 #bf-subject { font-weight: bold; float:left; margin-left: 12px; }
 .bf-detail-area { height: 100%; overflow-x: hidden; overflow-y: auto; padding: 15px; }
-#bf-content-area { position: absolute; left: 0; top: 0; width: 100%; height: 100%; padding-top: 56px;
-	overflow: hidden; margin: 0; }
+#bf-content-area { width: 100%; height: 100%; margin: 0; }
 #bf-content-area > .row > .col { padding-top: 20px; }
 .treeview { background-color: white; padding: 12px 6px; }
 .col-form-label { text-align: right; color: #555; background-color: #f0f0f0; }
 .navbar-light .navbar-nav .nav-link { color: #555; }
-.bf-menu-section { padding: 12px 8px 6px; background-color: white; border-right: 1px solid #ccc; }
+.bf-menu-section { padding: 6px; background-color: white; border-right: 1px solid #ddd; height: 100%; overflow-y: auto; }
 .bg-contents > hr { clear: both; }
 .bf-search-result dd { font-size: 0.7em; max-height: 50px; overflow: hidden;  }
 #bf-subject-input { margin-bottom: 12px; }
-#category-wrapper { padding: 0; border-right: 1px solid #ddd; background-color: #fcfcfc; }
-#category-wrapper ul { border-top: 1px solid #ccc; margin-left: 3px; margin-right: 3px; border-right: 1px solid #ccc; }
+#category-wrapper { padding-top: 12px; border-right: 1px solid #ddd; background-color: #fcfcfc; }
+#category-wrapper ul { padding: 0; border-top: 1px solid #ddd; margin-left: 3px; margin-right: 3px; border-right: 1px solid #ddd; }
+input[type="button"] + input[type="button"] { margin-right: 12px; }
 #category-wrapper li { list-style-type: none; border-radius: 0; margin-bottom: 0; border-top: 0; background-color: white; color: #555; }
 #category-wrapper li.on { background-color: #7ecef4; }
-#category-wrapper li.alert { border-bottom: 1px solid #ccc; border-right: 0; }
-input[type=text], input[type=password] { color: #3f51b5; border: 3px solid #cccccc; }
-input[type=text]::placeholder, input[type=password]::placeholder { color: #cccccc; }
+#category-wrapper li.alert { border-bottom: 1px solid #ddd; border-right: 0; }
+.title-area { height: 53px; margin: 55px 0 0 0; border-bottom: 1px solid #ddd; }
+.title-area > .col > h5 { margin: 12px; }
+.title-area > .col > div, .title-area > .col > input { margin: 6px 12px; }
+input[type="button"] + input[type="button"] { margin-right: 12px; }
+input[type=text], input[type=password] { color: #3f51b5; border: 3px solid #ddd; }
+input[type=text]::placeholder, input[type=password]::placeholder { color: #ddd; }
 .spinner-border { position: fixed; z-index: 999; width: 3rem; height: 3rem; 
 	overflow: visible; margin: auto; top: 0; left: 0; bottom: 0; right: 0; }
 .list-group-item, .ellipsis { width: 100%; overflow: hidden; word-break: break-all; white-space: nowrap;
    text-overflow: ellipsis; }
-.node-selected {  }
+.input-frm { padding: 0 0 0 15px; }
 .inner-shadow { box-shadow: inset 1px 1px 2px grey; }
 .item { height: 100%; }
 .dropzone { outline: solid 1px; height: 50px; }
 .draggable-dropzone--occupied { background: lightgreen; }
-.alert-light { border-color: #ccc; }
-ul.fancytree-container { border: none; }
+.alert-light { border-color: #ddd; }
+ul.fancytree-container { border: none !important; outline: none !important; }
   border-left: 0; border-right: 0; }
+span.fancytree-focused span.fancytree-title { outline: none !important; }
 #btn-create { width: 100%; }
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 { line-height: 1.3; }
 #bf-subject-wrapper { display: flex; }
@@ -93,7 +100,7 @@ ul.fancytree-container { border: none; }
 #bf-menu-header i+i { margin-right: 6px; }
 .list-group-item .icon { color: #0077cc; }
 #file-btns-wrapper, #folder-btns-wrapper { text-align: right; }
-#tree { height: calc(100% - 50px); border: 0; border-radius: 6px; display: none; padding: 10px 0 0;
+#tree { height: calc(100% - 50px); border: 0; border-radius: 6px; display: none; 
 	-ms-user-select: none; -moz-user-select: -moz-none; -webkit-user-select: none; -khtml-user-select: none; user-select:none;
 }
 #snackbar {
