--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -11,7 +11,7 @@
 <link href="./fancytree/skin-lion/ui.fancytree.css" rel="stylesheet" type="text/css">
 <link href="./css/custom.css" rel="stylesheet" type="text/css">
 <style>
-.Rectangle { width: 100%; height: 518px; background-color: #ffffff; }
+.Rectangle { width: 100%; height: 518px; }
 .icon-null { width: 60px; height: 60px; padding-top: 100px; margin: auto; object-fit: contain; }
 .msg-container {
     width: 100%; font-weight: 500; font-stretch: normal; font-style: normal;
