--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,171 +1,123 @@
 <!doctype html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8"/>
+<meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-<title>HelpPress Publisher</title>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+<title>온라인매뉴얼 제작도구</title>
 <link href="/img/favicon.ico" rel="shortcut icon" type="image/ico" />
-<link href="/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link href="/css/context.standalone.css" rel="stylesheet" type="text/css">
-<link href="/jquery/contextmenu/jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
-<link href="/jquery/fancytree/skin-lion/ui.fancytree.css" rel="stylesheet" type="text/css">
-<link href="/SynapEditor_2.8.4/synapeditor/synapeditor.min.css" rel="stylesheet" type="text/css">
+<link href="/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet"
+	type="text/css">
+<link href="/css/context.standalone.css" rel="stylesheet"
+	type="text/css">
+<link href="/jquery/contextmenu/jquery.contextMenu.min.css"
+	rel="stylesheet" type="text/css">
+<link href="/jquery/fancytree/skin-lion/ui.fancytree.css"
+	rel="stylesheet" type="text/css">
+<link href="/SynapEditor_2.8.4/synapeditor/synapeditor.min.css"
+	rel="stylesheet" type="text/css">
 <link href="/css/custom.css" rel="stylesheet" type="text/css">
 {{{layout.style}}}
 </head>
 <body>
+	<header>
+		<nav
+			class="navbar navbar-expand-md fixed-top justify-content-between navbar-light bg-light bf-shadow">
+			<a class="navbar-brand" href="/"> <img
+				src="/img/ic-logo-dbfi.png" class="d-inline-block align-top"
+				alt="company logo" style="height: 30px;">&nbsp;&nbsp;온라인매뉴얼
+			</a>
+			<button class="navbar-toggler collapsed" type="button"
+				data-toggle="collapse" data-target="#navbarCollapse"
+				aria-controls="navbarsExampleDefault" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="navbar-collapse collapse" id="navbarCollapse">
+				<ul class="navbar-nav mr-auto nav nav-pills">
+					<li class="nav-item"><a
+						class="nav-link{{#tab1}}{{tab1}}{{/tab1}}" href="/group">도움말그룹</a>
+					</li>
+					<li class="nav-item"><a
+						class="nav-link{{#tab2}}{{tab2}}{{/tab2}}" href="/content">도움말관리</a>
+					</li>
+				</ul>
+			</div>
+			<div class="form-inline nav-right">
+				<a href="/export" target="_blank"> <span
+					class="material-icons icon-image-preview" style="font-size: 30px;">preview</span>
+				</a> <a href="/release"> <span
+					class="material-icons icon-image-preview" style="font-size: 30px;">archive</span>
+				</a> <a href="/user"> <span
+					class="material-icons icon-image-preview" style="font-size: 30px;margin-right:12px;">group_add</span>
+				</a> 
+				<a href="javascript:showProfile();" data-toggle="modal"
+					data-target="#bf-modal-user">
+					{{userid}}님
+				</a>
+			</div>
+		</nav>
+	</header>
 
-<header>
-	<nav class="navbar navbar-expand-md fixed-top justify-content-between navbar-light bg-light bf-shadow">
-		<a class="navbar-brand" href="/">
-			<img src="/img/ic-logo-dbfi.png"  class="d-inline-block align-top" alt="company logo" style="height: 30px;">&nbsp;&nbsp;HelpPress
-		</a>
-		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="navbar-collapse collapse" id="navbarCollapse">
-			<ul class="navbar-nav mr-auto nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link{{#tab1}}{{tab1}}{{/tab1}}" href="/group">도움말그룹</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link{{#tab2}}{{tab2}}{{/tab2}}" href="/content">도움말관리</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link{{#tab3}}{{tab3}}{{/tab3}}" href="/release">배포관리</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link{{#tab4}}{{tab4}}{{/tab4}}" href="/user">관리자 관리</a>
-        </li> -->
-      </ul>
+	<div id="bf-body-wrapper">{{{layout.body}}}</div>
+
+	<!-- Modal #user -->
+	<div class="modal fade" id="bf-modal-user" role="dialog"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">메시지</h5>
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					로그아웃 하시겠습니까?
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-outline-secondary"
+						data-dismiss="modal">아니오</button>
+					<button id="btn-create-folder" type="button"
+						class="btn btn-primary" onclick="doLogout();">예</button>
+				</div>
+			</div>
 		</div>
-		<div class="form-inline nav-right">
-		  <a href="/export" target="_blank">
-		  	<span class="material-icons icon-image-preview" style="font-size: 30px;">preview</span>
-		  </a>
-		  <a href="/release">
-		  	<span class="material-icons icon-image-preview" style="font-size: 30px;">archive</span>
-		  </a>
-		  <a href="/user">
-		  	<span class="material-icons icon-image-preview" style="font-size: 30px;">groups</span>
-		  </a>
-		  <a href="javascript:showProfile();" data-toggle="modal" data-target="#bf-modal-user">
-		  	<span class="material-icons icon-image-preview" style="font-size: 30px;">account_circle</span>
-		  </a>
-    	</div>
-	</nav>
-</header>
+	</div>
 
-<div id="bf-body-wrapper">
-{{{layout.body}}}
-</div>
+	<div id="snackbar"></div>
 
-<!-- Modal #user -->
-<div class="modal fade" id="bf-modal-user" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">내 정보</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">ID : <span>{{#userid}}{{userid}}{{/userid}}</span></div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">닫기</button>
-        <button id="btn-create-folder" type="button" class="btn btn-primary" onclick="doLogout();">로그아웃</button>
-      </div>
-    </div>
-  </div>
-</div>
+	<div class="spinner primary"></div>
 
-<div id="snackbar"></div>
+	<div class="spinner-border text-primary" role="status"
+		style="width: 3rem; height: 3rem; display: none;">
+		<span class="sr-only">Loading...</span>
+	</div>
 
-<div class="spinner primary"></div>
-
-<div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem; display: none;">
-  <span class="sr-only">Loading...</span>
-</div>
-
-<script src="/jquery/jquery-3.5.1.min.js"></script>
-<script src="/jquery/jquery-ui.min.js"></script>
-<script src="/jquery/fancytree/jquery.fancytree-all.js"></script>
-<script src="/jquery/fancytree/modules/jquery.fancytree.edit.js"></script>
-<script src="/jquery/contextmenu/jquery.contextMenu.min.js"></script>
-<script src="/js/sockjs.min.js"></script>
-<script src="/js/stomp.min.js"></script>
-<script src="/bootstrap-4.5.2/js/bootstrap.bundle.min.js"></script>
-<script>
-var tree = {{#tree}}{{{tree}}}{{/tree}}{{^tree}}[]{{/tree}};
-var usehashchange = true;
-window.alert = function(message) {
-	var x = document.getElementById("snackbar");
-	x.className = "show";
-	x.innerText = message;
-	setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
-}
-function loadContents(id) {
-	$(".spinner-border").show();
-	// Todo: setTimeout
-	location.href = "/doc#" + id;
-}
-function search(id) {
-	if ($("#bf-search").val() && $("#bf-search").val().length>0) {
-		location.href='/search#' + $("#bf-search").val();
-	}
-}
-function goEdit() {
-	var id = window.location.hash.substr(1)?window.location.hash.substr(1):'';
-	location.href='/edit#' + id;
-}
-function goHashLocation() {
-	var id = window.location.hash.substr(1)?window.location.hash.substr(1):'';
-	loadContents(id);
-}
-function doLogout() {
-	  location.href = "/logout";
-}
-function doCreateFolder() {
-	var parentid = window.location.hash.substr(1)?"/" + window.location.hash.substr(1):'';
-	var foldername = $("#folder-name").val();
-	console.log("foldername " + foldername);
-	$.ajax({
-		url : "/api/v1/ecm/folder" + parentid,
-		type: "post",
-		dataType: "json",
-		data: { text: foldername, directory: true }
-	})
-	.done(function(msg) {
-		location.reload();
-	})
-	.fail(function() {
-	})
-	.always(function() {
-	});
-}
-
-$(function(){
-	$("#bf-search").keypress(function(e) {
-	    if (e.which==13){
-	    	console.log("keyword " + $(this).val());
-				search();
-				return false;
-	    }
-	});
-	$("#btn-folder-modal").click(function(e) {
-		$('#bf-modal-folder').modal();
-		e.stopPropagation();
-		e.preventDefault();
-	});
-	$("#btn-write").click(function() {
-		goEdit();
-	});
-	$("#btn-create-folder").click(function() {
-		doCreateFolder();
-	});
-});
-</script>
-{{{layout.script}}}
+	<script src="/jquery/jquery-3.5.1.min.js"></script>
+	<script src="/jquery/jquery-ui.min.js"></script>
+	<script src="/jquery/fancytree/jquery.fancytree-all.js"></script>
+	<script src="/jquery/fancytree/modules/jquery.fancytree.edit.js"></script>
+	<script src="/jquery/contextmenu/jquery.contextMenu.min.js"></script>
+	<script src="/js/sockjs.min.js"></script>
+	<script src="/js/stomp.min.js"></script>
+	<script src="/bootstrap-4.5.2/js/bootstrap.bundle.min.js"></script>
+	<script>
+		window.alert = function(message) {
+			var x = document.getElementById("snackbar");
+			x.className = "show";
+			x.innerText = message;
+			setTimeout(function() {
+				x.className = x.className.replace("show", "");
+			}, 3000);
+		}
+		function doLogout() {
+			location.href = "/logout";
+		}
+	</script>
+	{{{layout.script}}}
+	
 </body>
 </html>
