--- a/src/main/resources/templates/page/content.html
+++ b/src/main/resources/templates/page/content.html
@@ -2,22 +2,24 @@
 
 {{#style}}
 <style>
-#bf-content-area, #synapEditor, #new_synapEditor { width: 100%; min-height: 480px; }
+#bf-content-area, #synapEditor, #new_synapEditor { min-height: 480px; }
 #btn-create { float: right; }
 .bf-menu-section i { font-size: 22px; color: #888; margin-top: 8px; cursor: pointer; }
 .context-menu-list.context-menu-root {
   border-radius: 0; -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.5); box-shadow: 1px 1px 2px rgba(0,0,0,.5); }
 .context-menu-item { font-size: 13px; font-family: '맑은고딕'; }
+#btn-edit { display: none; }
 </style>
 {{/style}}
 
-<div id="bf-content-area" class="row">
-	
-	<!-- 좌측 컨텐츠그룹 선택 및 메뉴 구조 TREE -->
-	<div class="col col-md-3 bf-menu-section">
+<div class="row title-area">
+	<div class="col col-md-3">
+		<h5>▷ 도움말관리</h5>
+	</div>
+	<div class="col col-md-5">
 		<div class="form-group row" style="margin-bottom: 0;padding: 0 15px;">
 		  <select class="form-control col-8" id="sel_category" onchange="onSelectChanged(this);">
-		    <option value="">--- 도움말 그룹 ---</option>
+		    <option>----- 도움말그룹 선택 -----</option>
 			{{#list}}
 		    <option value="{{groupId}}">{{#name}}{{name}}{{/name}}</option>
 			{{/list}}
@@ -26,28 +28,33 @@
 		    <i id="btn-expand-all" class="far fa-plus-square"></i>&nbsp;&nbsp;<i id="btn-collapse-all" class="far fa-minus-square"></i>
 		  </div>
 		</div>
+	</div>
+	<div class="col col-md-4">
+		<input id="btn-edit" type="button" value="수정완료" class="btn btn-outline-primary btn-modify float-right">
+	</div>
+</div>
+
+<div id="bf-content-area" class="row">
+	
+	<!-- 좌측 컨텐츠그룹 선택 및 메뉴 구조 TREE -->
+	<div class="col col-md-3 bf-menu-section">
 		<div id="tree">
 		</div>
 	</div>
 	
 	<!-- 컨텐츠 상세내용 -->
 	<div class="col col-md-9 bf-detail-area" id="bf-contents" style="overflow-y: hidden;">
-		<div class="row" style="height: calc(100%);">
+	  <div class="row" style="height: calc(100%);">
 	    <iframe id="contents-detail" class="col-12" width="100%" height="100%" src="/empty-content.html"></iframe>
-			<div id="editor-wrapper" class="col-12" style="height: 100%;">
-	      <div class="row">
-			    <div class="col-12 form-group">
-			      <input type="button" value="수정" class="btn btn-outline-primary btn-modify float-right">
-			    </div>
-			  </div>
+		<div id="editor-wrapper" class="col-12" style="height: 100%;">
 	      <div class="row" style="height: calc(100% - 55px);">
 	        <div class="col-12 form-group" style="height: 100%;">
-					  <textarea id="synapEditor" name="content"></textarea>
-				  </div>
-				</div>
+			  <textarea id="synapEditor" name="content"></textarea>
 			</div>
+		  </div>
 		</div>
-	</div>
+	  </div>
+    </div>
 	
 </div>
 
@@ -59,6 +66,30 @@
 <script src="/SynapEditor_2.8.4/synapeditor/externals/SEDocModelParser/SEDocModelParser.min.js"></script>
 <script src="/SynapEditor_2.8.4/synapeditor/externals/SEShapeManager/SEShapeManager.min.js"></script>
 <script src="/page/content.js"></script>
+<script>
+function saveTree() {
+  console.log('saveTree');
+  var _tree = $.ui.fancytree.getTree();
+  var tree = _tree.toDict(true);
+  // remove partsel selected
+  $(".spinner-border").show();
+  $.ajax({
+	  url: "/api/v1/ecm/group/" + selectedGroupId,
+	  method: "PUT",
+		data: {  tree: JSON.stringify(tree.children) }
+  	})
+	.done(function(msg) {
+	  _tree.reload(JSON.parse(msg.result.tree));
+	})
+	.fail(function() {
+	})
+	.always(function() {
+		setTimeout(function() {
+			$(".spinner-border").hide();
+		}, 300);
+	});
+}
+</script>
 {{/script}}
 
 {{/layout}}
