--- a/src/main/resources/templates/page/release.html
+++ b/src/main/resources/templates/page/release.html
@@ -11,49 +11,53 @@ ul.list-wrapper li { padding: 2px 10px; font-size: 14px; font-weight: 300; list-
 </style>
 {{/style}}
 
-<div class="row header-row" style="position:absolute; top: 56px; width: 100%;">
-	<div class="col col-sm-4">
-    <h5>배포이력</h5>	   
+<div class="row title-area">
+	<div class="col col-sm-6">
+		<h5>▷ 배포관리</h5>
 	</div>
-	<div class="col col-sm-4">
-	  <h5>변경이력</h5>
-	</div>
-	<div class="col col-sm-4">
-	  <h5>다운로드</h5>
+	<div class="col col-sm-6 form-group">
+		<input type="button" value="전체파일" class="btn btn-outline-primary" id="btn-download-all">
+		<input type="button" value="변경된파일" class="btn btn-outline-primary" onclick="alert('현재 버전에서는 지원하지 않습니다');">
+		<input type="button" value="내변경파일" class="btn btn-outline-primary" onclick="alert('현재 버전에서는 지원하지 않습니다');">
 	</div>
 </div>
 
-<div class="row list-row" style="position: absolute; top: 90px; width: 100%; height: calc(100% - 90px);">
-	
-	<div class="col col-sm-4">
-	  <ul class="list-wrapper release-wrapper"> 
-		{{#rlist}}
-		<li>
-		  <a href="javascript:downloadFromHistory({{id}})">
-		  <span><i class="far fa-file-code"></i>&nbsp;{{type}}</span><span style="float: right;">{{updDtStr}}</span>
-		  </a>
-		</li>
-		{{/rlist}}
-	  </ul>
+<div id="bf-content-area" class="row">
+	<div class="row header-row" style="width: 100%;">
+		<div class="col col-sm-6">
+	    <h5>배포이력</h5>	   
+		</div>
+		<div class="col col-sm-6">
+		  <h5>변경이력</h5>
+		</div>
 	</div>
 	
-	<div class="col col-sm-4">
-		<ul class="list-wrapper">
-			{{#hlist}}
+	<div class="row list-row" style="width: 100%; height: 100%;">
+		
+		<div class="col col-sm-6">
+		  <ul class="list-wrapper release-wrapper"> 
+			{{#rlist}}
 			<li>
-			  <span><i class="far fa-file-code"></i>&nbsp;{{statusKr}} {{filePath}}</span><span style="float: right;">{{updDtStr}}</span>
-			 </li>
-			{{/hlist}}
-		</ul>
+			  <a href="javascript:downloadFromHistory({{id}})">
+			  <span><i class="far fa-file-code"></i>&nbsp;{{type}}</span><span style="float: right;">{{updDtStr}}</span>
+			  </a>
+			</li>
+			{{/rlist}}
+		  </ul>
+		</div>
+		
+		<div class="col col-sm-6">
+			<ul class="list-wrapper">
+				{{#hlist}}
+				<li>
+				  <span><i class="far fa-file-code"></i>&nbsp;{{status}} {{#filePath}}{{filePath}}{{/filePath}}</span><span style="float: right;">{{updDtStr}}</span>
+				 </li>
+				{{/hlist}}
+			</ul>
+		</div>
+		
 	</div>
-	
-	<div class="col col-sm-4 bf-detail-area" id="bf-contents">
-		<input type="button" value="전체 파일" class="btn btn-outline-primary" id="btn-download-all"><br><br>
-		<input type="button" value="변경된 모든 파일" class="btn btn-outline-primary" onclick="alert('현재 버전에서는 지원하지 않습니다');"><br><br>
-		<input type="button" value="내가 변경한 파일" class="btn btn-outline-primary" onclick="alert('현재 버전에서는 지원하지 않습니다');"><br><br>
-		<a href="/export" target="_blank"><input type="button" value="미리보기" class="btn btn-outline-primary"></a>
-	</div>
-	
+
 </div>
 
 <iframe id="ifrm" style="display: none;"></iframe>
