--- a/src/main/resources/templates/page/user.html
+++ b/src/main/resources/templates/page/user.html
@@ -2,11 +2,23 @@
 
 {{#style}}
 <style>
-.login_btn { display: none; }
-#category-wrapper ul { padding: 0; }
-input[type="button"] + input[type="button"] { margin-right: 12px; }
 </style>
 {{/style}}
+
+<div class="row title-area">
+	<div class="col col-md-3">
+		<h5>▷ 사용자관리</h5>
+	</div>
+	<div class="col col-md-5">
+	</div>
+	<div class="col col-md-4 form-group">
+        <input type="button" value="수정완료" class="btn btn-outline-primary btn-modify float-right hide">
+        {{#notOnlyOne}}
+        <input type="button" value="삭제" class="btn btn-outline-primary btn-delete float-right hide">
+        {{/notOnlyOne}}
+        <input type="button" value="등록" class="btn btn-outline-primary btn-create float-right">
+	</div>
+</div>
 
 <div id="bf-content-area" class="row">
 	
@@ -24,24 +36,15 @@ input[type="button"] + input[type="button"] { margin-right: 12px; }
 	</div>
 	
 	<div class="col col-md-10 bf-detail-area" id="bf-contents">
-		<div class="row">
-	      <div class="col-12 form-group">
-	        <input type="button" value="수정" class="btn btn-outline-primary btn-modify float-right hide">
-	        {{#notOnlyOne}}
-	        <input type="button" value="삭제" class="btn btn-outline-primary btn-delete float-right hide">
-	        {{/notOnlyOne}}
-	        <input type="button" value="등록" class="btn btn-outline-primary btn-create float-right">
-	      </div>
-		</div>
 	  <div class="row">
 	    <div class="col-12">
-				<form name="frm">
-					<div class="form-group row">
-				    <label for="groupId" class="col-sm-2 col-form-label">관리자ID</label>
-				    <div class="col-sm-10">
-				      <input type="text" id="username" class="form-control" placeholder="관리자ID (영숫자, 최대 15자)" maxlength="15">
-				    </div>
-				  </div>
+			<form name="frm" class="input-frm">
+				<div class="form-group row">
+			    <label for="groupId" class="col-sm-2 col-form-label">관리자ID</label>
+			    <div class="col-sm-10">
+			      <input type="text" id="username" class="form-control" placeholder="관리자ID (영숫자, 최대 15자)" maxlength="15">
+			    </div>
+			  </div>
 	        <div class="form-group row">
 	          <label for="password" class="col-sm-2 col-form-label">비밀번호</label>
 	          <div class="col-sm-10">
