--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-<title>온라인매뉴얼 제작도구</title>
+<title>온라인도움말</title>
 <link href="/img/favicon.ico" rel="shortcut icon" type="image/ico" />
 <link href="/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet"
 	type="text/css">
@@ -26,7 +26,7 @@
 			class="navbar navbar-expand-md fixed-top justify-content-between navbar-light bg-light bf-shadow">
 			<a class="navbar-brand" href="/"> <img
 				src="/img/ic-logo-dbfi.png" class="d-inline-block align-top"
-				alt="company logo" style="height: 30px;">&nbsp;&nbsp;온라인매뉴얼
+				alt="company logo" style="height: 30px;">&nbsp;&nbsp;온라인도움말
 			</a>
 			<button class="navbar-toggler collapsed" type="button"
 				data-toggle="collapse" data-target="#navbarCollapse"
