--- a/src/main/resources/templates/page/group.html
+++ b/src/main/resources/templates/page/group.html
@@ -6,11 +6,11 @@
 {{/style}}
 
 <div class="row title-area">
-	<div class="col col-md-2">
-		<h5>▷ 도움말그룹</h5>
+	<div class="col col-sm-6">
+		<h5><i class="bf-icon navi"></i> 도움말그룹</h5>
 	</div>
-	<div class="col col-md-10 form-group">
-		<input type="button" value="수정" class="btn btn-outline-primary btn-modify float-right hide">
+	<div class="col col-sm-6 form-group">
+		<input type="button" value="수정완료" class="btn btn-outline-primary btn-modify float-right hide">
         <input type="button" value="삭제" class="btn btn-outline-primary btn-delete float-right hide">
         <input type="button" value="등록" class="btn btn-outline-primary btn-create float-right">
 	</div>
