--- a/src/main/resources/templates/page/join.html
+++ b/src/main/resources/templates/page/join.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>관리자등록 - DB금융투자 도움말 제작도구</title>
+<title>관리자등록::DB온라인도움말</title>
 <link rel="shortcut icon" type="image/ico" href="/img/favicon.ico">
 <link rel="stylesheet" type="text/css" href="/bootstrap-4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/css/mini-default.min.css">
