--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -3,45 +3,64 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(./materialicons.woff2) format('woff2');
+  src: url(/material-icons/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(/material-icons/MaterialIcons-Regular.woff2) format('woff2'),
+    url(/material-icons/MaterialIcons-Regular.woff) format('woff'),
+    url(/material-icons/MaterialIcons-Regular.ttf) format('truetype');
 }
-.bf-icon { background-image: url('/img/ic_icons.png'); width: 32px; height: 32px; background-size: cover;
-	background-repeat: no-repeat; padding-left: 32px; }
-.bf-icon.navi { }
-.bf-icon.preview { background-position: -32px 0; }
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
+  font-size: 24px;  /* Preferred icon size */
   display: inline-block;
-  white-space: nowrap;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
   word-wrap: normal;
+  white-space: nowrap;
   direction: ltr;
-  -webkit-font-feature-settings: 'liga';
+  /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
+a { color: #05854A; }
 html, body { height: 100%; font-family: 'Noto Sans KR','Apple SD Gothic','맑은고딕','Nanum Gothic',sans-serif; font-weight: normal; overflow-y: hidden; }
 a:hover { text-decoration: none; }
+.bf-icon { background-image: url('/img/ic_icons.png'); width: 32px; height: 32px; background-size: cover;
+	background-repeat: no-repeat; padding-left: 32px; }
+.bf-icon.navi { }
+.bf-icon.preview { background-position: -32px 0; }
 .hide { display: none; }
-.navbar { z-index: 1; border-bottom: 1px solid #eee; padding: 0 16px; vertical-align: middle; height: 52px; }
-.navbar-brand { width: 188px; }
-.navbar-nav { width: 600px; }
+.navbar { z-index: 1; border-bottom: 1px solid #ccc; padding: 0 16px; vertical-align: middle; height: 52px; background-color: white!important; }
+.navbar-brand { width: 188px; font-size: 14px; font-weight: bold; display: inherit; }
+.navbar-brand img + div { margin-top: 9px; margin-left: 24px; }
+.navbar-nav { width: 500px; margin: 20px auto 0; }
 .navbar-nav .nav-link { padding: 4px 8px; }
-.navbar-light .navbar-nav .nav-link.active { color: white; background-color: #7ecef4; }
+.navbar-light .navbar-nav .nav-link.active,
+	.nav-right .material-icons.active { border-bottom: 4px solid #05854A; background-color: inherit; color: #05854A; }
+.navbar-light .navbar-nav .nav-link { font-size: 13px; border-radius: 0; color: #333333; font-weight: bold; }
 .nav-item { min-width: 126px; text-align: center; }
-.bf-shadow { -moz-box-shadow: 3px 1px 3px 1px #999; -webkit-box-shadow: 3px 1px 3px 1px #999;
-    box-shadow: 3px 1px 3px 1px #999; }
-.nav-right { position: absolute; right: 12px; bottom: 0; }
-.nav-right .material-icons { font-size: 32px; margin-top: 6px; color: #555; }
-.nav-right a + a { margin-left: 12px; }
+.nav-right { float: right; margin-top: 15px; width: 217px; display: inherit; }
+.nav-right .material-icons { font-size: 32px; margin-top: 6px; color: #777; }
+.nav-right a + a { margin-left: 12px; font-size: 13px; font-weight: bold; }
+.title-area { background-color: #f3f3f3; }
+.title-area h6 { font-size: 13px; padding: 8px 0; color: #05854A; }
+.title-area h6 > i { float: left; margin-right: 8px; }
+.title-area select + i { margin-right: 4px; }
+.title-area i + div { margin-top: 4px; font-weight: bold; }
+.title-area { height: 40px; margin: 51px 0 0 0; border-bottom: 1px solid #ccc; }
 #bf-body-wrapper { height: calc(100% - 54px); }
 #editor-wrapper { display: none; }
 #emptyTree { padding: 10px 0 0 0; }
-#sel_category { font-size: 16px; border: 2px solid #888; border-radius: 9px; padding: 4px 12px; background-color: #7ecef4; color: white; }
+#sel_category { font-size: 13px; border: 1px solid #05854A; border-radius: 4px; padding: 4px 12px; color: #05854A; margin-right: 12px; }
 #contents-detail { border: 0; }
 #bf-subject { font-weight: bold; float:left; margin-left: 12px; }
 .bf-detail-area { height: calc(100% - 60px); overflow-x: hidden; overflow-y: auto; padding: 15px; }
@@ -54,14 +73,14 @@ a:hover { text-decoration: none; }
 .bf-search-result dd { font-size: 0.7em; max-height: 50px; overflow: hidden;  }
 #bf-subject-input { margin-bottom: 12px; }
 #category-wrapper { padding-top: 12px; border-right: 1px solid #ddd; background-color: #fcfcfc; }
+#category-wrapper .btn { display: inline-flex; width: 100%; height: 32px; }
+#category-wrapper .btn i { float: left; margin-top: 6px; font-size: 18px; margin-right: 8px; }
+#category-wrapper .btn i + span { margin-top: 5px; }
 #category-wrapper ul { padding: 0; border-top: 1px solid #ddd; margin-left: 3px; margin-right: 3px; border-right: 1px solid #ddd; }
 input[type="button"] + input[type="button"] { margin-right: 12px; }
 #category-wrapper li { list-style-type: none; border-radius: 0; margin-bottom: 0; border-top: 0; background-color: white; color: #555; }
 #category-wrapper li.on { background-color: #7ecef4; }
 #category-wrapper li.alert { border-bottom: 1px solid #ddd; border-right: 0; }
-.title-area { height: 53px; margin: 55px 0 0 0; border-bottom: 1px solid #ddd; }
-.title-area > .col > h5 { margin: 12px; }
-.title-area > .col > div, .title-area > .col > input { margin: 6px; }
 input[type="button"] + input[type="button"] { margin-right: 12px; }
 input[type=text], input[type=password] { color: #3f51b5; border: 3px solid #ddd; }
 input[type=text]::placeholder, input[type=password]::placeholder { color: #ddd; }
@@ -86,16 +105,26 @@ span.fancytree-focused span.fancytree-title { outline: none !important; }
 .treeview .list-group-item:hover { color: #666; }
 #bf-search { border-radius: 6px 0 0 6px; margin-right: -1px !important; border-color: #6c757d; width: inherit; }
 #bf-search-wrapper { float: right; margin-right: 36px !important; }
-#btn-search { position: absolute; right: 12px; background-color: white; border-radius: 0 6px 6px 0; 
-	-webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
-.btn-warning { background-color: #ffff00; color: #6c757d; }
-.btn-info { background-color: #7ecef4; color: white; }
-.btn + .btn { margin-left: 6px; }
-.btn{
+.btn {
+  /*
   -webkit-box-shadow: 3px 3px 5px -3px rgba(102,102,102,0.7);
   -moz-box-shadow: 3px 3px 5px -3px rgba(102,102,102,0.7);
   box-shadow: 3px 3px 5px -3px rgba(102,102,102,0.7);
+  */
+  min-width: 74px;
+  padding: 0 12px;
+  height: 28px; 
+  font-size: 13px;
+  background-color: white;
 }
+.btn-primary { color: white; background-color: #05854A; }	
+.btn-outline-primary { color: #05854A; border-color: #05854A; }
+.btn-warning { background-color: #ffff00; color: #6c757d; }
+.btn-info { background-color: #7ecef4; color: white; }
+.btn + .btn { margin-left: 6px; }
+#btn-search { position: absolute; right: 12px; background-color: white; border-radius: 0 6px 6px 0; 
+	-webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
+
 .dropdown-menu .divider { background-color: transparent; border-bottom: 1px solid #e5e5e5; }
 #bf-menu-header { height: 38px; padding: 9px 12px; }
 #bf-menu-header > i { float: right; font-size: 18px; cursor: pointer; }
@@ -133,6 +162,7 @@ span.fancytree-focused span.fancytree-title { outline: none !important; }
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 span.fancytree-title { text-overflow: ellipsis; overflow-x: hidden; word-break: break-all; white-space: nowrap; max-width: calc(90% - 10px); }
+.modal-title { width: 100%; border-radius: 4px; background-color: #05854A; color: white; padding: 2px 12px;}
 .modal-footer { border-top: 0; }
 .modal-header { border-bottom: 0; }
 
