--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,13 +18,11 @@
 .top-bar { background-color: white; border-bottom: 1px solid rgba(10, 10, 10, 0.25); }
 .top-bar, .top-bar ul { background-color: white; }
 .top-bar-right li:last-child { margin-left: 3px; }
-.menu .menu-text { width: 252px; padding: 0 1rem; display: -webkit-inline-box; }
+.menu .menu-text { width: 252px; padding: 0 1rem; display: inline-flex; }
 .logo-img { background-image: url('/img/logo.svg'); width: 120px; height: 36px; }
 .logo-text { margin-top: 12px; }
-.menu .is-active { border-bottom: 4px solid #05854A; }
+.menu .is-active { background-image: url('/img/bg-underline.gif'); background-position: bottom; background-repeat: no-repeat; }
 .menu .is-active > a { background-color: inherit; color: #05854A; }
-.button, .button.disabled, .button[disabled], .button.disabled:hover, .button[disabled]:hover, .button.disabled:focus, .button[disabled]:focus {
-}
 .accordion-menu li { width: inherit; }
 .breadcrumbs { margin: 0; }
 .callout .nav { width: inherit; margin-top: 7px; margin-left: 16px; }
