--- a/src/main/resources/templates/page/user.html
+++ b/src/main/resources/templates/page/user.html
@@ -14,60 +14,57 @@
 	</nav>
 	<div class="button-group float-right">
 	  {{#notOnlyOne}}
-	  <a class="button small success hollow float-right btn-delete">삭제</a>
+	  <a class="button small success hollow" href="javascript:void(0);" id="btn-delete">삭제</a>
       {{/notOnlyOne}}
-	  <a class="button small success hollow float-right btn-modify" href="javascript:doLogout();">수정완료</a>
-	  <a class="button small success hollow float-right btn-create" href="javascript:doLogout();">등록</a>	
+	  <a class="button small primary" href="javascript:void(0);" id="btn-modify">수정완료</a>
+	  <a class="button small primary" href="javascript:void(0);" id="btn-create">등록</a>	
 	</div>
 </div>
 
 <div class="grid-x">
 	
-	<div id="group-list-wrapper" class="cell small-3">
+	<div class="cell small-3">
+		<img src="/img/bg-user-square.jpg" style="border: 1px solid #ccc" />
+	</div>
+	
+	<div class="cell small-3" id="group-list-wrapper">
 		<ul>
-		  {{#list}}
-		  <li>
-	        <a class="cell button success hollow expanded" href="javascript:getUser(this);" bf-name="{{#userid}}{{userid}}{{/userid}}">
-				{{#userid}}{{userid}}{{/userid}}
-			</a>
-		  </li>
-		  {{/list}}
-		  <li>
-		  <a class="cell button success expanded" href="javascript:getUser();">
-		    <i class="fi-pencil"></i>&nbsp;관리자추가
-	      </a>
-	      </li>
-      </ul>
+			{{#list}}
+			<li>
+				<a class="cell button success hollow expanded btn-list-item" href="javascript:void(0);" onclick="getUser(this);" bf-name="{{#userid}}{{userid}}{{/userid}}">
+					{{#userid}}{{userid}}{{/userid}}
+				</a>
+			</li>
+			{{/list}}
+			<li>
+				<a class="cell button success expanded" href="javascript:void(0);" onclick="getUser();" >
+					<i class="fi-pencil"></i>&nbsp;관리자추가
+				</a>
+			</li>
+		</ul>
 	</div>
 		
-	<div class="cell small-9 bf-detail-area" id="bf-contents">
-	  <div class="grid-x">
-		  <div class="cell small-6">
-		  	<img src="/img/bg-user-square.jpg" style="border: 1px solid #ccc" />
-		  </div>
-	      <div class="cell small-6">
-			<form name="frm" class="input-frm">
-				<div class="form-group row">
-			    <label for="groupId" class="col-sm-2 col-form-label"><i class="fi-torso"></i> 사용자ID</label>
-			    <div class="col-sm-10">
-			      <input type="text" id="username" class="form-control" placeholder="관리자ID (영숫자, 최대 15자)" maxlength="15">
-			    </div>
+	<div class="cell small-6 bf-detail-area" id="bf-contents">
+		<form name="frm" class="input-frm">
+			<div class="form-group row">
+			   <label for="groupId" class="col-sm-2 col-form-label"><i class="fi-torso"></i> 사용자ID</label>
+			   <div class="col-sm-10">
+			     <input type="text" id="username" class="form-control" placeholder="관리자ID (영숫자, 최대 15자)" maxlength="15">
+			   </div>
+			</div>
+			<div class="form-group row">
+				<label for="password" class="col-sm-2 col-form-label"><i class="fi-unlock"></i> 비밀번호</label>
+				<div class="col-sm-10">
+				  <input type="password" id="password" class="form-control" placeholder="비밀번호 (영수특수문자, 최대 15자)" maxlength="15">
+				</div>
+			</div>
+			<div class="form-group row">
+			  <label for="password2" class="col-sm-2 col-form-label"><i class="fi-unlock"></i> 비밀번호 확인</label>
+			  <div class="col-sm-10">
+			    <input type="password" id="password2" class="form-control" placeholder="비밀번호 확인 (영수특수문자, 최대 15자)" maxlength="15">
 			  </div>
-	        <div class="form-group row">
-	          <label for="password" class="col-sm-2 col-form-label"><i class="fi-unlock"></i> 비밀번호</label>
-	          <div class="col-sm-10">
-	            <input type="password" id="password" class="form-control" placeholder="비밀번호 (영수특수문자, 최대 15자)" maxlength="15">
-	          </div>
-					</div>
-					<div class="form-group row">
-	          <label for="password2" class="col-sm-2 col-form-label"><i class="fi-unlock"></i> 비밀번호 확인</label>
-	          <div class="col-sm-10">
-	            <input type="password" id="password2" class="form-control" placeholder="비밀번호 확인 (영수특수문자, 최대 15자)" maxlength="15">
-	          </div>
-	        </div>
-			</form>
-		  </div>
-	  </div>
+			</div>
+		</form>
 	</div>
 	
 </div>
