--- a/src/main/resources/templates/page/group.html
+++ b/src/main/resources/templates/page/group.html
@@ -2,6 +2,7 @@
 
 {{#style}}
 <style>
+.bf-detail-area { border: 1px solid #555; border-radius: 12px; padding: 16px; }
 </style>
 {{/style}}
 
@@ -13,58 +14,47 @@
 	  </ul>
 	</nav>
 	<div class="button-group float-right">
-	  <a class="button small success hollow float-right btn-delete" href="javascript:doLogout();">삭제</a>
-	  <a class="button small success hollow float-right btn-modify">수정완료</a>
-	  <a class="button small success hollow float-right btn-create" href="javascript:doLogout();">등록</a>	
+	  <a class="button small success hollow" href="javascript:void(0);" id="btn-delete">삭제</a>
+	  <a class="button small primary" href="javascript:void(0);" id="btn-modify">수정완료</a>
+	  <a class="button small primary" href="javascript:void(0);" id="btn-create">등록</a>	
 	</div>
 </div>
 
 <div class="grid-x">
 	
-	<div id="group-list-wrapper" class="cell small-3">
+	<div class="cell small-3" id="group-list-wrapper">
+  		<img src="/img/bg-group-square.jpg" style="border: 1px solid #ccc" />
+	</div>
+	
+	<div class="cell small-3" id="group-list-wrapper">
 		<ul>
 		  {{#list}}
 		  <li>
-		  <a class="cell button success hollow expanded" href="javascript:getCategory(this);" bf-name="{{#name}}{{name}}{{/name}}" bf-category-id="{{groupId}}" bf-order="{{orderNo}}">{{#name}}{{name}}{{/name}}</a>
+		  <a class="cell button success hollow expanded btn-list-item" href="javascript:void(0);" onclick="getCategory(this);" bf-name="{{#name}}{{name}}{{/name}}" bf-category-id="{{groupId}}" bf-order="{{orderNo}}">{{#name}}{{name}}{{/name}}</a>
 		  </li>
 		  {{/list}}
 		  <li>
-		  <a class="cell button success expanded" href="javascript:getCategory();">
+		  <a class="cell button success expanded" href="javascript:void(0);" onclick="getCategory();">
 		    <i class="fi-pencil"></i>&nbsp;그룹추가
 	      </a>
 	      </li>
       </ul>
 	</div>
-	
-	<div class="cell small-9 bf-detail-area" id="bf-contents">
-	  <div class="grid-x">
-		  <div class="cell small-6">
-		  	<img src="/img/bg-group-square.jpg" style="border: 1px solid #ccc" />
-		  </div>
-	    <div class="cell small-6">
-			<form name="frm" class="input-frm">
-				<!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
-				<div class="form-group row">
-			    <label for="groupId" class="col-sm-2 col-form-label"><i class="fi-link"></i>&nbsp;도움말그룹URI</label>
-			    <div class="col-sm-10">
-			      <input type="text" id="groupId" class="form-control" placeholder="영소문자 (공백없음)" value="{{#item}}{{item.uri}}{{/item}}" maxlength="20">
-			    </div>
-			  </div>
-	        <div class="form-group row">
-	          <label for="name" class="col-sm-2 col-form-label"><i class="fi-torso"></i>&nbsp;도움말그룹명</label>
-	          <div class="col-sm-10">
-	            <input type="text" id="name" class="form-control" placeholder="한글이름" value="{{#item}}{{item.name}}{{/item}}" maxlength="20">
-	          </div>
-				</div>
-		        <div class="form-group row">
-		          <label for="orderNo" class="col-sm-2 col-form-label"><i class="fi-list-number"></i>&nbsp;정렬순서</label>
-		          <div class="col-sm-10">
-		            <input type="text" id="orderNo" class="form-control" placeholder="숫자 (0~255)" value="{{#item}}{{item.orderNo}}{{/item}}" maxlength="3">
-		          </div>
-				</div>
-			  </form>
-		  </div>
-	  </div>
+		
+	<div class="cell small-6 bf-detail-area">
+		<!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
+		<label for="groupId" class="col-sm-2 col-form-label"><i class="fi-link"></i>&nbsp;도움말그룹URI</label>
+		<div class="col-sm-10">
+		  <input type="text" id="groupId" class="form-control" placeholder="영소문자 (공백없음)" value="{{#item}}{{item.uri}}{{/item}}" maxlength="20">
+		</div>
+		<label for="name" class="col-sm-2 col-form-label"><i class="fi-torso"></i>&nbsp;도움말그룹명</label>
+		<div class="col-sm-10">
+		  <input type="text" id="name" class="form-control" placeholder="한글이름" value="{{#item}}{{item.name}}{{/item}}" maxlength="20">
+		</div>
+		<label for="orderNo" class="col-sm-2 col-form-label"><i class="fi-list-number"></i>&nbsp;정렬순서</label>
+		<div class="col-sm-10">
+		  <input type="text" id="orderNo" class="form-control" placeholder="숫자 (0~255)" value="{{#item}}{{item.orderNo}}{{/item}}" maxlength="3">
+		</div>
 	</div>
 	
 </div>
