--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -56,7 +56,7 @@
 	  <div class="top-bar-right">
 	    <ul class="menu">
 	      <li class="{{#tab4}}{{tab4}}{{/tab4}}"><a href="/user">사용자관리</a></li>
-	      <li><a class="button success hollow" data-open="bf-modal-user">{{userid}}님</a></li>
+	      <li><a class="button secondary hollow" data-open="bf-modal-user">{{userid}}님</a></li>
 	    </ul>
 	  </div>
 	</div>
