--- a/src/main/resources/templates/page/user.html
+++ b/src/main/resources/templates/page/user.html
@@ -38,7 +38,7 @@
 			{{/list}}
 			<li>
 				<a class="cell button success expanded" href="javascript:void(0);" onclick="getUser();" >
-					<i class="fi-pencil"></i>&nbsp;관리자추가
+					<i class="fi-pencil"></i>&nbsp;사용자추가
 				</a>
 			</li>
 		</ul>
