--- a/src/main/resources/templates/page/content.html
+++ b/src/main/resources/templates/page/content.html
@@ -41,10 +41,10 @@
 	</div>
 	<div class="cell small-4">
   	  	<div class="button-group float-right">
-		  <a class="button small success hollow" href="javascript:void(0);" id="btn-delete">삭제</a>
+		  <a class="button small alert" href="javascript:void(0);" id="btn-delete">삭제</a>
 		  <a class="button small primary hollow" href="javascript:void(0);" id="btn-download">다운로드</a>
 		  <a class="button small primary" href="javascript:void(0);" id="btn-modify">수정</a>
-		  <a class="button small primary" href="javascript:void(0);" id="btn-modify-complete">수정완료</a>
+		  <a class="button small success" href="javascript:void(0);" id="btn-modify-complete">수정완료</a>
 		</div>
 	</div>
   </div>
