--- a/src/main/resources/templates/page/group.html
+++ b/src/main/resources/templates/page/group.html
@@ -2,7 +2,14 @@
 
 {{#style}}
 <style>
-.bf-detail-area { border: 1px solid #555; border-radius: 12px; padding: 16px; }
+.bf-detail-area > div { border: 1px solid #ccc; border-radius: 6px;padding: 16px; }
+.left-section { background-image: url('/img/bg-group-left.jpg');
+	border: 1px solid #ccc; border-left: 0; }
+.contents-area { height: calc(100% - 60px); }
+table th, table td { border: 1px solid #ccc; border-collapse: collapse; }
+table th { text-align: center; }
+table td.btn-list-item:hover { background-color: #77b2d8; cursor: pointer; }
+.btn-list-item.primary { background-color: #1779ba; color: white; }
 </style>
 {{/style}}
 
@@ -14,25 +21,38 @@
 	  </ul>
 	</nav>
 	<div class="button-group float-right">
-	  <a class="button small success hollow" href="javascript:void(0);" id="btn-delete">삭제</a>
+	  <a class="button small secondary hollow" href="javascript:void(0);" id="btn-delete">삭제</a>
 	  <a class="button small primary" href="javascript:void(0);" id="btn-modify">수정완료</a>
 	  <a class="button small primary" href="javascript:void(0);" id="btn-create">등록</a>	
 	</div>
 </div>
 
-<div class="grid-x">
+<div class="grid-x contents-area">
 	
-	<div class="cell small-3" id="group-list-wrapper">
-  		<img src="/img/bg-group-square.jpg" style="border: 1px solid #ccc" />
+	<div class="cell small-3 left-section">
 	</div>
 	
 	<div class="cell small-3" id="group-list-wrapper">
+		<table>
+		  <thead>
+		    <tr>
+		      <th>도움말그룹 선택</th>
+		    </tr>
+		  </thead>
+		  <tbody>
+		  	{{#list}}
+		    <tr>
+		      <td class="btn-list-item" onclick="getCategory(this);" bf-name="{{#name}}{{name}}{{/name}}" bf-category-id="{{groupId}}" bf-order="{{orderNo}}">{{#name}}{{name}}{{/name}}</td>
+		    </tr>
+		    {{/list}}
+		    {{^list}}
+		    <tr>
+		      <td>도움말그룹을 등록해주세요</td>
+		    </tr>
+		    {{/list}}
+		    </tbody>
+		</table>	
 		<ul>
-		  {{#list}}
-		  <li>
-		  <a class="cell button success hollow expanded btn-list-item" href="javascript:void(0);" onclick="getCategory(this);" bf-name="{{#name}}{{name}}{{/name}}" bf-category-id="{{groupId}}" bf-order="{{orderNo}}">{{#name}}{{name}}{{/name}}</a>
-		  </li>
-		  {{/list}}
 		  <li>
 		  <a class="cell button success expanded" href="javascript:void(0);" onclick="getCategory();">
 		    <i class="fi-pencil"></i>&nbsp;그룹추가
@@ -43,17 +63,19 @@
 		
 	<div class="cell small-6 bf-detail-area">
 		<!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
-		<label for="groupId" class="col-sm-2 col-form-label"><i class="fi-link"></i>&nbsp;도움말그룹URI</label>
-		<div class="col-sm-10">
-		  <input type="text" id="groupId" class="form-control" placeholder="영소문자 (공백없음)" value="{{#item}}{{item.uri}}{{/item}}" maxlength="20">
-		</div>
-		<label for="name" class="col-sm-2 col-form-label"><i class="fi-torso"></i>&nbsp;도움말그룹명</label>
-		<div class="col-sm-10">
-		  <input type="text" id="name" class="form-control" placeholder="한글이름" value="{{#item}}{{item.name}}{{/item}}" maxlength="20">
-		</div>
-		<label for="orderNo" class="col-sm-2 col-form-label"><i class="fi-list-number"></i>&nbsp;정렬순서</label>
-		<div class="col-sm-10">
-		  <input type="text" id="orderNo" class="form-control" placeholder="숫자 (0~255)" value="{{#item}}{{item.orderNo}}{{/item}}" maxlength="3">
+		<div>
+			<label for="groupId" class="col-sm-2 col-form-label"><i class="fi-link"></i>&nbsp;도움말그룹URI</label>
+			<div class="col-sm-10">
+			  <input type="text" id="groupId" class="form-control" placeholder="영소문자 (공백없음)" value="{{#item}}{{item.uri}}{{/item}}" maxlength="20">
+			</div>
+			<label for="name" class="col-sm-2 col-form-label"><i class="fi-torso"></i>&nbsp;도움말그룹명</label>
+			<div class="col-sm-10">
+			  <input type="text" id="name" class="form-control" placeholder="한글이름" value="{{#item}}{{item.name}}{{/item}}" maxlength="20">
+			</div>
+			<label for="orderNo" class="col-sm-2 col-form-label"><i class="fi-list-number"></i>&nbsp;정렬순서</label>
+			<div class="col-sm-10">
+			  <input type="text" id="orderNo" class="form-control" placeholder="숫자 (0~255)" value="{{#item}}{{item.orderNo}}{{/item}}" maxlength="3">
+			</div>
 		</div>
 	</div>
 	
